# profile-python

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  Publish.yml
profile_python/: App.py  __main__.py  endpoint.py  main.py  networking.py  profile.py
src/: main.py
tests/: test_endpoint.py  test_networking.py  test_profile.py  test_profile_python.py
