[tool.poetry]
name = "profile-python"
version = "0.4.0"
description = "Profile python is a script for you to view your data and github repositories."
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/heroesofcode/profile-python"
repository = "https://github.com/heroesofcode/profile-python"
include = [ "LICENSE.md" ]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
rich = ">=12.4.1,<14.0.0"
requests = "^2.27.1"
pyfiglet = "^0.8.post1"
pytest-cov = ">=3,<5"
flake8 = ">=4.0.1,<6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.1"

[tool.poetry.scripts]
profile-python = "profile-python=profile_python.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
